@@ -1,5 +1,12 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/eap-method-leap.c
+	  src/wireless-security/eap-method-peap.c
+	  src/wireless-security/eap-method-simple.c
+		- fill stuff in
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-ttls.c
 		- (eap_method_ttls_new): fill anonymous username and CA cert
 
